# write-for-california

./: .gitignore  README.md  pyproject.toml
extension/: content.js  manifest.json
wfc/: __init__.py  charts.py  config.py  dbd_automation.py  dbd_browser_steps.py  monitor.py  queries.py  scraper.py  utils.py  webapp.py
wfc/static/: style.css
wfc/templates/: index.html
